# trellis-local-tool

./: .gitignore  CLAUDE.md  COLAB_GUIDE.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  TRELLIS_HuggingFace_Client.ipynb  TRELLIS_Image_to_3D.ipynb  TRELLIS_Image_to_3D_FINAL.ipynb  TRELLIS_Image_to_3D_Fixed.ipynb  TRELLIS_Image_to_3D_v2.ipynb  config.yaml  pyproject.toml
api/: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  DEPLOY_OPTIONS.md  DEPLOY_RENDER.md  Dockerfile  Dockerfile.sync  Dockerfile.worker  MODAL_DEPLOYMENT.md  QUICKSTART.md  README.md  __init__.py  client_example.py  config.py  dependencies.py  deploy-to-github.sh  deploy.sh  docker-compose.yml  e2e_cli_tests.sh  fly.toml  index.html  main.py  main_sync.py  modal_app.py  render.yaml  requirements-sync.txt  requirements.txt  run.py  test_api.sh
api/.railway/: config.json
api/middleware/: __init__.py  auth.py  rate_limit.py
api/models/: __init__.py  enums.py  requests.py  responses.py
api/routers/: __init__.py  health.py  jobs.py  rembg.py  trellis.py
api/routers/sync/: __init__.py  rembg.py  trellis.py
api/services/: __init__.py  job_store.py  rembg_service.py  storage.py  trellis_service.py  trellis_v1.py  trellis_v2.py
api/tasks/: __init__.py  celery_app.py  cleanup_tasks.py  rembg_tasks.py  trellis_tasks.py
api/tests/: __init__.py  conftest.py  test_health.py
api/tests/test_middleware/: __init__.py  test_auth.py
api/tests/test_routers/: __init__.py  test_jobs.py  test_rembg.py
api/tests/test_services/: __init__.py  test_job_store.py  test_rembg_service.py  test_storage.py  test_trellis_v1.py
api/tests/test_tasks/: __init__.py  test_rembg_tasks.py  test_trellis_tasks.py
examples/: README.md
scripts/: setup_trellis.sh
src/trellis_tool/: __init__.py  cli.py
src/trellis_tool/core/: __init__.py  exporter.py  (+2 more)
(+4 files in other folders)
